--- a/package.json
+++ b/package.json
@@ -31,6 +31,14 @@
       "react-app/jest"
     ]
   },
+  "optimization": {
+    "scripts": true,
+    "styles": {
+       "minify": false,
+       "inlineCritical": false
+    },
+    "fonts": true
+  },
   "browserslist": {
     "production": [
       ">0.2%",
